# scout_setting

./: .gitignore  README.md
src/ouster-ros/ouster-ros/config/: driver_params.yaml
src/ouster-ros/ouster-ros/launch/: driver.launch.py
src/patchwork-plusplus/ros/: CMakeLists.txt
src/patchwork-plusplus/ros/config/: param.yaml
src/patchwork-plusplus/ros/launch/: patchworkpp.launch.py
src/roas2_bringup/: CMakeLists.txt  package.xml  requirement.rosinstall
src/roas2_bringup/config/: ekf copy.yaml  ekf.yaml  ekf_global.yaml  gnss_params.yaml  navsat_transform.yaml
src/roas2_bringup/launch/: bringup.launch copy.py  bringup.launch.py  bringup.launch.py.bak  display.launch.py  localization.launch.py  rosbag_test.launch.py  view_robot.launch.py
src/roas2_bringup/rules/: 50-relay.rules  50-sonar.rules
src/roas2_bringup/rviz/: view_robot.rviz
src/roas2_bringup/systemd/: can-drive.service  can_driver  connect-can  connect-can.service  gs_usb.ko  scout  scout.service
src/roas2_bringup/urdf/: roas2.urdf.xacro
src/septentrio_gnss_driver/: frames_2025-11-04_15.02.29.gv  frames_2025-11-04_15.09.40.gv  frames_2025-11-04_15.16.00.gv  frames_2025-11-04_15.18.18.gv
src/septentrio_gnss_driver/config/: AsteRx_SBi3_Pro+_config.txt  rover copy.yaml  rover.yaml
src/septentrio_gnss_driver/launch/: rover.launch.py
src/sonar_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sonar_ros/arduino/relay_ino/: relay_ino.ino
src/sonar_ros/arduino/sonar_ino/: sonar_ino.ino
src/sonar_ros/sonar_ros/: relay_node.py  sonar_sensor.py
(+9 files in other folders)
